# screen_ocr_ros2

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
config/: DEVICE.md  compass.json  digit_slots.json  rois.json
recognition_service/: README.md  pyproject.toml
recognition_service/config/: compass.json  digit_slots.json  rois.json
recognition_service/scripts/: api_server.py  recognize.py
recognition_service/src/screen_ocr/: core.py  digit_reader.py
scripts/: api_server.py  recognize.py
src/meter_ocr/: __init__.py  core.py  digit_reader.py  paths.py
src/screen_ocr/config/: pipeline_locator.yaml
src/screen_ocr/include/screen_ocr/: ocr_client.hpp
src/screen_ocr/src/: ocr_client.cpp  pipeline_locator_node.cpp  result_mapper.cpp
