[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-locator-screen-ocr"
version = "1.0.0"
description = "OpenCV screen recognition with calibrated digit-template matching and ROI processing"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy==1.23.5",
    "opencv-python==4.6.0.66",
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "python-multipart==0.0.20",
]

[tool.setuptools.packages.find]
where = ["src"]
